welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:5: error: 'case' expected but '(' found.
		(false, false) => return 0;
                ^max1020:5: error: '}' expected but ';' found.
		(false, false) => return 0;
                                          ^max1020:6: error: not a legal formal parameter
		(false, true) => return b;	
                 ^max1020:7: error: not a legal formal parameter
		(true, false) => return a;
                 ^max1020:8: error: not a legal formal parameter
		(true, true) => return Math.max(a, b);
                 ^max1020:12: error: expected class or object definition
def appartient(a:Int, x:Int, y:Int):Boolean = 
^max1020:17: error: eof expected but '}' found.
 }
 ^